[gd_scene format=3 uid="uid://dkabeq3ceyrqw"]

[ext_resource type="Script" uid="uid://ujm7jwk42ikt" path="res://globals/global/scripts/global.gd" id="1_xolcf"]

[sub_resource type="Animation" id="Animation_bvdxb"]
resource_name = "fade_to_black"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jdcfe"]
_data = {
&"fade_to_black": SubResource("Animation_bvdxb")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qkc67"]
content_margin_left = 8.0
content_margin_top = 4.0
content_margin_right = 8.0
content_margin_bottom = 4.0
bg_color = Color(0, 0, 0, 0.501961)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Global" type="Node2D" unique_id=207693946]
z_index = 1024
script = ExtResource("1_xolcf")

[node name="TransitionAnimations" type="AnimationPlayer" parent="." unique_id=1964329973]
libraries/ = SubResource("AnimationLibrary_jdcfe")
speed_scale = 2.0

[node name="QuitTip" type="Label" parent="." unique_id=910443935]
visible = false
offset_left = 320.0
offset_top = 8.0
offset_right = 640.0
offset_bottom = 39.0
theme_override_styles/normal = SubResource("StyleBoxFlat_qkc67")
text = "Quit? Press again!"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="." unique_id=773453574]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2147480100.0
offset_top = -2147480100.0
offset_right = 2147480100.0
offset_bottom = 2147480100.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="ReloadTimer" type="Timer" parent="." unique_id=1490889607]
one_shot = true

[node name="SaveTimer" type="Timer" parent="." unique_id=424793137]
autostart = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_save_timer_timeout"]
